Changelog
---------

v8.0.0:
 Project changes:
 - updated Kotlin to version 1.9.10
 - updated ControlsFX to version 11.1.2
 - updated JUnit to version 5.10.0
 - updated Mockito to version 5.4.0
 - updated JFreeChart to version 1.5.3 and JFreeChart-FX to 2.0.1
 - updated sqlite-jdbc to version 3.42.0.0
 SportsTracker changes:
 - Exercise: optional values are now nullable
   (ascent, descent, AVG heartrate, calories)
   - no more workarounds for persistence and statistics needed
   - ExerciseList doesn't display 0 values anymore when no values are given
   - Statistic calculation was improved, missing values (null) are now excluded
 - Exercise and Weight model classes: changed value types from float to double
   to prevent precision and rounding issues when persisting in SQLite database
 - Storage of application data in SQLite database instead of XML files
   - Advantages:
     - faster loading times, almost no saving times
     - database schema provides foreign keys between exercises, sport types
       etc. to ensure data consistency
     - transaction support for discarding data changes
     - data can be processed and evaluated easily by using 3rd party SQLite
       database browsers (e.g. custom statistics via SQL)
   - SQLite storage implementation was done in plain JDBC to avoid further
     complexity, dependencies and performance impacts
   - Memory consumption of SportsTracker has not been increased due to SQLite
     storage compared to XML storage
   - Existing application data is being migrated automatically to SQLite on
     first application startup (XML files are not deleted for backup reasons)
   - The SQLite Export feature has been removed, as this is the default
 ExerciseViewer changes:
 - Garmin FIT parser: bugfix for handling laps without any speed data
   (when the lap contains just a break without any activity)
 - All XML-based parsers (GPX, TCX, Polar): fixed error when opening files with
   spaces or special characters in the filename