@@ -17,7 +17,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>21</javafx.version>
+        <javafx.version>21.0.1</javafx.version>
         <kotlin.version>1.9.10</kotlin.version>
         <kotlinx.serialization.version>1.6.0</kotlinx.serialization.version>
     </properties>
